# RootEncoder

./: SRT_RECEIVER_QUICKSTART.md  SRT_RECEIVER_TESTING_GUIDE.md  jitpack.yml
app/src/main/: AndroidManifest.xml
srt/: build.gradle.kts
srt/src/main/cpp/: CMakeLists.txt  NativeSrt.cpp  NativeSrt.h
srt/src/main/cpp/srt-include/srt/: srt.h
srt/src/main/java/com/pedro/srt/srt/: SrtClient.kt
srt/src/main/java/com/pedro/srt/utils/: SrtSocket.kt
